🎨 Fix spans on languages legend not showing up.

--- a/src/customStyle.css
+++ b/src/customStyle.css
@@ -5,13 +5,11 @@
   width: 100%;
 }
 
-/* Languages are better contrast on white background. */
-.languages-legend > li {
+.skills span {
   color: black;
 }
 
-/* Legend items are better contrast on purple background. */
-.grommetux-legend__item > span {
+.project span {
   color: white;
 }
 
